core: build and install fbcondecor_ctl.static

--- a/core/TODO
+++ b/core/TODO
@@ -13,3 +13,4 @@ New features
 ============
 - automatic theme resizing
 - add effects (fadein/fadeout/blendin) for icon/anim
+- provide a single static binary for fbsplashd/fbcondecor_ctl to save space
