--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,3 +1,8 @@
+27 Jan 2008 * <spock@gentoo.org> * splashutils-1.5.3.4
+ - Fix installation of pkgconfig files for libfbsplash(render).
+ - Add support for 'suspend' and 'resume' types in themes.
+ - Minor clean-ups in the code.
+
 06 Jan 2008 * <spock@gentoo.org> * splashutils-1.5.3.3
  - Add fbcondecor-related functions to splash-functions.sh
  - Build and install fbcondecor_ctl.static.
