--- a/core/TODO
+++ b/core/TODO
@@ -4,7 +4,6 @@ Documentation
 
 Fixes
 =====
-- render: move all sanity checks (position on screen) to bndrect calculation
 - optimize rect-based rendering
 - sanitize the parser unit tests
 - add unit tests for the rendering framework
@@ -14,3 +13,6 @@ New features
 - automatic theme resizing
 - add effects (fadein/fadeout/blendin) for icon/anim
 - provide a single static binary for fbsplashd/fbcondecor_ctl to save space
+- splashy2fbsplash theme converter
+- usplash2fbsplash theme converter
+
