--- a/gentoo/ChangeLog
+++ b/gentoo/ChangeLog
@@ -1,3 +1,5 @@
+ - Add support for SPLASH_TEXTBOX.
+
 06 Jan 2008 * <spock@gentoo.org> * splashutils-gentoo-1.0.11
  - Fix the 3rd method of event device detection.
  - Use the fbcondecor_* functions from splashutils-functions.sh in the
