--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,5 +1,6 @@
  - Provide a single static binary that perfoms the functions of
    fbsplashd, splash_util and, optionally, fbcondecor_ctl.
+ - Add support for the blendin() and blendout() special effect modifiers.
  - Add support for the <textbox> section in config files.
  - Add support for the fbsplash message log.
  - Add the splashy2fbsplash theme converter.
