--- a/gentoo/ChangeLog
+++ b/gentoo/ChangeLog
@@ -1,4 +1,4 @@
-17 Feb 2008 * <spock@gentoo.org> * splashutils-gentoo-1.0.12
+?? Feb 2008 * <spock@gentoo.org> * splashutils-gentoo-1.0.12
  - Add support for SPLASH_TEXTBOX.
 
 06 Jan 2008 * <spock@gentoo.org> * splashutils-gentoo-1.0.11
