--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -4,6 +4,7 @@
  - Add support for the blendin() and blendout() special effect modifiers.
  - Add support for the <textbox> section in config files.
  - Add support for the fbsplash message log.
+ - Add support for the autoverbose feature.
  - Add the splashy2fbsplash theme converter.
 
 27 Jan 2008 * <spock@gentoo.org> * splashutils-1.5.3.4
