--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+splashutils (1.5.4.1-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Jean-Damien Durand <JeanDamienDurand@free.fr>  Mon, 18 Feb 2008 20:17:40 +0100
+
 splashutils (1.5.3.4-1) unstable; urgency=low
 
   * New upstream version
