core: ChangeLog update

--- a/gentoo/ChangeLog
+++ b/gentoo/ChangeLog
@@ -1,4 +1,4 @@
-?? Feb 2008 * <spock@gentoo.org> * splashutils-gentoo-1.0.12
+25 Feb 2008 * <spock@gentoo.org> * splashutils-gentoo-1.0.12
  - Add support for SPLASH_TEXTBOX.
  - Add support for SPLASH_AUTOVERBOSE.
 
