gentoo: splashutils-gentoo-1.0.13 ChangeLog message

--- a/gentoo/ChangeLog
+++ b/gentoo/ChangeLog
@@ -1,3 +1,8 @@
+01 Mar 2007 * <spock@gentoo.org> * splashutils-gentoo-1.0.13
+ - Only coldplug services started by autoconfig if autoconfig is in the
+   default runlevel
+ - Fix fbcondecor_ctl's path.
+
 25 Feb 2008 * <spock@gentoo.org> * splashutils-gentoo-1.0.12
  - Add support for SPLASH_TEXTBOX.
  - Add support for SPLASH_AUTOVERBOSE.
