--- a/core/ChangeLog
+++ b/core/ChangeLog
@@ -1,3 +1,10 @@
+22 Jul 2008 * <spock@gentoo.org> * splashutils-1.5.4.2
+- Avoid a segfault in fbcondecor_ctl by checking that the theme
+  is correctly loaded.
+- Avoid a segfault in fbsplashd by using the default font for
+  the main splash message if a font hasn't been explicitly
+  specified.
+
 20 Apr 2008 * <spock@gentoo.org> * splashutils-1.5.4.1
 - Use a monotonic clock for animation timing calculations (this is
   fixes the problem of animations freezing when the system clock is
