--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+splashutils (1.5.4.2-1) unstable; urgency=low
+
+  * Upstream version 1.5.4.2
+
+ -- Jean-Damien Durand <JeanDamienDurand@free.fr>  Fri, 15 Aug 2008 22:36:56 +0200
+
 splashutils (1.5.4-1) unstable; urgency=low
 
   * New upstream version
